# fridge-poetry

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml  seed_db.sql
.devcontainer/: postgis.Dockerfile
.github/workflows/: ci.yml  deploy.yml
.sqlx/: query-06751d5a9dd10a57fe6348149440e337d9a3e35a20544f6dde38b50c42ab1860.json  query-1502c8025d5121c6bcb8370a04435b4cd5c60aa000287330f959e224d1f9f291.json  query-1e589c934616bfa902f760bbc30f3cae861e6a98784a6a0b6ccf65eb963ecdd6.json  query-20e8ce39b98f7853a2e46eea2b67d976bd36754100af87d15fec0b78fb0f98ff.json  query-3200bc2707a792233eb91c4dc6a4bb4fde04f596090bdeba25b965302a21be51.json  query-459a153f76a928c14294f523c0cef3a9a199bb32de2825bc13ce57c568a943a6.json  query-48ffaf2fde7fdadc7e1323344adf48140a33a11a1d3417b0e5b48318d7ebbd99.json  query-54d5731ffd24265b10fae65eae0e0337ba8d277c7976b0e28f4e61e10a31c115.json  query-606c7c272d5a8bf0a667327644babe2472827cbb43a66faf7ee728c1090c333d.json  query-6566a361f33ebcb81f048b8755c02a9903782fd3a69cd29f30f2ef1249979c57.json  query-6e63045f63fcd1896282344278b6e57781e2cebe05e0a2f1968c4746875f764f.json  query-9505d82fba4718350544c612d094b2413a90483a1fa521528a4c5eaa1cfec729.json  query-a8c6877c53a872ae239d1ec2295167652fff514871d5e3124cec633846e956ba.json  query-c459bd3d13c6d500ea369469582b4bef255b5e5504af5af9cf9ee43a4e61860e.json  query-cbff79e6732ac11ba594f8e13ec26752bb1457b75158fa83919a8c803917a27b.json  query-dd56bb679d542833a7f13ca924c84e182aef91ab692150996332f1361c00d483.json  query-e0c0a73e8c63fb5bde92ddd0cd12a72c6be15ea8220dcbcf8ef45e16e8f97021.json  query-ededad64d3e84bebf256d8faa2eb5f97b72781b719c29caa9077f3ced5782cfd.json  query-fb606f25964975a8acc94bb02aa3930e3e901bfdde75ba5764803ed739ab2db9.json
frontend/: .env.production  .prettierignore  deno.json  index.html  vite.config.ts
frontend/public/: 404.html  about.html
frontend/src/: App.ts  AppState.ts  Config.ts  Magnet.ts  ReconnectingWebSocket.ts  Utils.ts  Window.ts  magnet.ts  main.ts  style.css  words.ts
migrations/: 20250203211251_magnets.down.sql  20250203211251_magnets.up.sql  20250211012957_create_magnets_table.down.sql  20250211012957_create_magnets_table.up.sql  20250211013103_create_magnets_change_trigger.down.sql  20250211013103_create_magnets_change_trigger.up.sql  20260422070951_create_magnets_gist_index.down.sql  20260422070951_create_magnets_gist_index.up.sql
src/: api.rs  config.rs  error.rs  geometry.rs  main.rs  middleware.rs  state.rs  websocket.rs
