[package]
name = "fridge-poetry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.8.1", features = ["macros", "ws"] }
futures-util = "0.3.30"
rubenvy = "0.1.1"
sentry = { version = "0.36.0", default-features = false, features = [
    "anyhow",
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
    "tower",
    "tower-axum-matched-path",
    "tracing",
] }
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "migrate",
    "chrono",
] }
thiserror = "2.0.11"
tokio = { version = "1.40.0", features = ["full", "time"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "fs", "limit", "request-id", "timeout", "trace", "util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
secrecy = "0.10.3"
tokio-util = "0.7.13"
uuid = { version = "1.10.0", features = ["v7"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
