[package]
name = "fridge-poetry"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.89"
envy = "0.4.2"
futures-util = "0.3.30"
mimalloc = "0.1.43"
rmp-serde = "1.3.0"
rubenvy = "0.1.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
# Override native-tls with rustls, keep other default features
sentry = { version = "0.36.0", default-features = false, features = [
    "anyhow",
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
    "tracing",
] }
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "migrate",
    "chrono",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
thiserror = "2.0.11"
tokio = { version = "1.40.0", features = ["full", "time"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v7"] }
rand = "0.9.0"
